# delivery-bot

./: .gitignore  README.md  app.py  demo-script.md  pyproject.toml
scripts/: exercise_analytics.py  exercise_chat_service.py  exercise_insights.py  exercise_openai_planner.py  exercise_query_executor.py  profile_dataset.py
src/rappi_ai_analyst/: __init__.py  analytics.py  chat_service.py  config.py  data_loader.py  heuristics.py  insight_models.py  insights.py  metric_catalog.py  models.py  openai_planner.py  planner_models.py  presentation.py  query_executor.py  query_models.py  reporting.py
tests/: test_analytics.py  test_chat_service.py  test_data_loader.py  test_insights.py  test_openai_planner.py  test_query_executor.py
