[project]
name = "rappi-ai-ops-analyst"
version = "0.1.0"
description = "Local-first AI analyst for the Rappi AI Engineer challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.40.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "plotly>=5.24.0",
  "pydantic>=2.9.0",
  "openai>=1.54.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
